[PURPLE-128] collect(Collectors.toList()) -> toList()